--- a/less/actors.less
+++ b/less/actors.less
@@ -1073,6 +1073,7 @@
 
     .icon-img {
       width: 45px;
+      height: 38px;
       z-index: 1;
       fill: currentColor;
       stroke: currentColor;
